[package]
name = "ex_winlog_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_winlog_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.37"

[target.'cfg(windows)'.dependencies]
winlog = "0.2.6"
log = { version = "0.4", features = ["std"] }
regex = "1.5.5"
generic-array = "0.12.4"
